objects/Object_Map__c.object
<CustomObject>
    <fields>
        <fullName>Create_Attributes_Map__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Attributes Map</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Map_Key__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Map Key</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Id</field>
                <operation>equals</operation>
                <valueField>Object_Attribute_Map__c.Parent_Object_Map__r.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Object_Attribute_Map__c</referenceTo>
        <relationshipLabel>Object Map Keys</relationshipLabel>
        <relationshipName>Object_Map_Keys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Object_Map__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Object Map</label>
        <referenceTo>Object_Map__c</referenceTo>
        <relationshipLabel>Child Object Maps</relationshipLabel>
        <relationshipName>Child_Object_Maps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Collection_Type__c</fullName>
        <label>Target Collection Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>List</fullName>
                </value>
                <value>
                    <fullName>Map</fullName>
                </value>
                <value>
                    <fullName>Set</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <label>Target</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TempId__c</fullName>
        <externalId>true</externalId>
        <label>TempId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Object_Maps</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>Source__c</columns>
        <columns>Target__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Parent_Object_Map__c</field>
            <operation>equals</operation>
        </filters>
        <label>All Object Maps</label>
    </listViews>
</CustomObject>